# impressive-ui

./: README.md  pyproject.toml
examples/gtk/: README.md  calc.py  counter.py  hello.py  increment_counter.py  todo.py
examples/qt/: counter.py  hello.py
src/impressive_ui/: __init__.py  effect.py
src/impressive_ui/abc/: __init__.py  signal.py  state.py
src/impressive_ui/gtk/: __init__.py  state.py
src/impressive_ui/gtk/factory/: __init__.py  conditional.py  preview.py  reactive_sequence.py
src/impressive_ui/qt/: __init__.py  factory.py  state.py  style.py
src/impressive_ui/reactive_sequence/: __init__.py  core.py  diff.py  dispatchers.py
